# Marbles

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  Grid.h  Marble.h  NormalDistribution.h  Shader.h
shaders/: triangle_frag.glsl  triangle_vert.glsl
src/: CMakeLists.txt  Camera.cpp  Grid.cpp  Marble.cpp  Shader.cpp
